--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@parcel/watcher": "^2.4.0"
+    "@apollo/server": "^4.11.3",
+    "@parcel/watcher": "^2.4.0",
+    "graphql": "^16.10.0",
+    "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
     "@types/jest": "^29.0.3",
