--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/datasource-rest": "^6.4.1",
     "@apollo/server": "^4.11.3",
     "@parcel/watcher": "^2.4.0",
     "graphql": "^16.10.0",
